--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <img src="portrait.jpg" alt="Devanshi Jain Portrait" width="1000" />
         <p>
           I am a 3rd-year undergraduate at UC San Diego studying mathematics and
-          computer science.
+          computer science. I am interested in probabilistic reasoning in AI. 
         </p>
       </section>
     </main>
