about is same as home

--- a/about.html
+++ b/about.html
@@ -22,7 +22,16 @@
     <main>
     <section> 
         <!--  id="organizations" -->
-    <h1>About Me</h1>
+    <h2>About Me</h1>
+    <figure>
+        <img src="portrait.jpg" alt="Devanshi Jain Portrait" style="max-width: 100%; height: auto;">
+        <!-- <figcaption>Devanshi Jain</figcaption> -->
+    </figure>
+    <p>
+        I am a 3rd-year undergraduate at UC San Diego studying mathematics and computer science. I have 
+        a keen interest in probabilistic reasoning in the field of Artificial Intelligence. 
+    </p>
+    <p>
   </section>
     </main>
     <aside>
@@ -33,3 +42,4 @@
     </footer>
 </body>
 </html>
+<!-- https://main--dashing-starlight-213a40.netlify.app/ -->
