--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Contact Devanshi Jain - Get in touch with me for inquiries and collaborations in mathematics and computer science.">
+    <meta property="og:title" content="Contact Devanshi Jain">
+    <meta property="og:description" content="Get in touch with me for inquiries and collaborations in mathematics and computer science.">
+    <meta property="og:image" content="your-image-url.jpg">
     <title>Contact | Devanshi Jain</title>
 </head>
 <body>
