--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This is the portfolio website of Devanshi Jain, a mathematics and computer science undergraduate student at UC San Diego.">
+    <meta name="contact.email" content="djain@ucsd.edu">
+    <meta name="contact.linkedin" content="https://www.linkedin.com/in/djain18/">
+    <meta name="contact.github" content="https://github.com/devanshi-jain">
     <title>Home | Devanshi Jain</title>
 </head>
 <body>
@@ -55,6 +58,13 @@
                 support MathML, which happened not until 2023! The delayed of MathML was was due to various factors, including the non-uniform browser 
                 compatibilities being the major factor, along with others like complexities of rendering math notation on the web. This includes the hefty task of 
                 that MathML has to support this across different browsers and versions.</p>
+
+            <p>Feel free to reach out to me through any of the following methods:</p>
+            <ul>
+                <li><a href="https://www.linkedin.com/in/djain18/">LinkedIn</a></li>
+                <li><a href="https://github.com/devanshi-jain">GitHub</a></li>
+                <li>Email: <a href="mailto:djain@ucsd.edu">djain@ucsd.edu</a></li>
+            </ul></p>
         </section>
     </main>
     <aside>
