Added a gitignore for the svgs

--- a/index.html
+++ b/index.html
@@ -21,50 +21,23 @@
             <li><a href="organizations.html">Organizations</a></li>
             <li><a href="resume.html">Resume</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li><a href="labexperiments.html">Lab-Experiments</a></li>
         </ul>
     </nav>
     <main>
         <section>
-            <h1>About Me</h1>
+            <h1>Hello! I am Devanshi Jain</h1>
             <figure>
                 <img src="portrait.jpg" alt="Devanshi Jain Portrait" style="max-width: 100%; height: auto;">
-                <!-- <figcaption>Devanshi Jain</figcaption> -->
             </figure>
             <p>
-              I am a 3rd-year undergraduate at UC San Diego studying mathematics and computer science. I have 
-              a keen interest in probabilistic reasoning in the field of Artificial Intelligence. 
+                I am a 3rd-year undergraduate at UC San Diego studying mathematics and computer science. I have
+                a keen interest in probabilistic reasoning in the field of Artificial Intelligence. I am working to become a good software engineer to make products accessible to all.
             </p>
-            <p>
-            Here is Einstein's famous equation:
-              <math xmlns="http://www.w3.org/1998/Math/MathML">
-                  <mstyle displaystyle="true">
-                      <msup>
-                          <mi>E</mi>
-                      </msup>
-                      <mo>=</mo>
-                      <msup>
-                          <mi>m</mi>
-                      </msup>
-                      <mo>&#8290;</mo>
-                      <msup>
-                          <mi>c</mi>
-                          <mn>2</mn>
-                      </msup>
-                  </mstyle>
-              </math>
-            </p>
-            <p>MathML, despite being in the HTML specification for a long time, has only recently gained broader support. In 2008, 
-                Firefox started supporting it, and in 2012, Safari followed suit. However, it took even longer for Chrome and Edge to 
-                support MathML, which happened not until 2023! The delayed of MathML was was due to various factors, including the non-uniform browser 
-                compatibilities being the major factor, along with others like complexities of rendering math notation on the web. This includes the hefty task of 
-                that MathML has to support this across different browsers and versions.</p>
+            
+            
 
-            <p>Feel free to reach out to me through any of the following methods:</p>
-            <ul>
-                <li><a href="https://www.linkedin.com/in/djain18/">LinkedIn</a></li>
-                <li><a href="https://github.com/devanshi-jain">GitHub</a></li>
-                <li>Email: <a href="mailto:djain@ucsd.edu">djain@ucsd.edu</a></li>
-            </ul></p>
+            <!-- </p> -->
         </section>
     </main>
     <aside>
