--- a/organizations.html
+++ b/organizations.html
@@ -24,6 +24,8 @@
             <li><a href="organizations.html">Organizations</a></li>
             <li><a href="resume.html">Resume</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li><a href="labexperiments.html">Lab-Experiments</a></li>
+
         </ul>
     </nav>
     <main>
