--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Resume</h1>
+        <h1>Welcome to My Portfolio</h1>
     </header>
     <nav>
         <ul>
@@ -17,6 +17,8 @@
             <li><a href="organizations.html">Organizations</a></li>
             <li><a href="resume.html">Resume</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li><a href="labexperiments.html">Lab-Experiments</a></li>
+
         </ul>
     </nav>
     <main>
