--- a/work.html
+++ b/work.html
@@ -17,6 +17,8 @@
             <li><a href="organizations.html">Organizations</a></li>
             <li><a href="resume.html">Resume</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li><a href="labexperiments.html">Lab-Experiments</a></li>
+
         </ul>
     </nav>
     <main>
@@ -28,6 +30,26 @@
                 <p><em>Software Engineering Intern</em> 
                     <!-- <em></em></p> -->
                 <p>Part-time, September 2022 - Present</p>
+                <div class="skills">
+                    <a href="https://www.python.org/" target="_blank">
+                        <img src="https://www.vectorlogo.zone/logos/python/python-icon.svg" alt="Python" width="70" height="100"/>
+                    </a>
+                    <a href="https://numpy.org/" target="_blank">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/3/31/NumPy_logo_2020.svg" alt="numpy" width="170" height="100"/>
+                    </a>
+                    <a href="https://pandas.pydata.org" target="_blank">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/e/ed/Pandas_logo.svg" alt="pandas" width="170" height="100"/>
+                    </a>
+                    <!-- <a href="https://matplotlib.org" target="_blank">
+                        <img src="logo-light.svg" alt="matplotlib" width="170" height="100"/>
+                    </a> -->
+                    <a href="logo_light.svg" target="_blank">
+                        <img src="logo_light.svg" alt="Matplotlib" width="170" height="100"/>
+                    </a>
+                    <a href="https://seaborn.pydata.org" target="_blank">
+                        <img src="https://seaborn.pydata.org/_static/logo-wide-lightbg.svg" alt="seaborn" width="170" height="100"/>
+                    </a>
+                </div>
                 <p>• Created a user-friendly smart-plug schedule optimization application which reduced building energy consumption by 20%.</p>
                 <p>• Utilized Numpy, Pandas, Matplotlib, and Seaborn to create insightful data visualizations that informed strategic decisions.</p>
                 <p>• Led the formulation of energy-saving criteria for 8+ campus laboratories, driving UCSD’s sustainability initiatives forward.</p>
