--- a/about.html
+++ b/about.html
@@ -17,23 +17,96 @@
             <li><a href="organizations.html">Organizations</a></li>
             <li><a href="resume.html">Resume</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li><a href="labexperiments.html">Lab-Experiments</a></li>
+
         </ul>
     </nav>
     <main>
     <section> 
         <!--  id="organizations" -->
     <h2>About Me</h1>
+        
     <figure>
-        <img src="portrait.jpg" alt="Devanshi Jain Portrait" style="max-width: 100%; height: auto;">
-        <!-- <figcaption>Devanshi Jain</figcaption> -->
+        <img src="snow.png" alt="Devanshi Jain Portrait" style="max-width: 50%; height: auto;">
+        <img src="pilot.jpg" alt="Devanshi Jain Portrait" style="max-width: 39.6%; height: auto;">
     </figure>
-    <p>
-        I am a 3rd-year undergraduate at UC San Diego studying mathematics and computer science. I have 
-        a keen interest in probabilistic reasoning in the field of Artificial Intelligence. 
-    </p>
-    <p>
   </section>
     </main>
+    <h2>Technical Skills</h2>
+
+            <div class="programming-skills">
+                <h3>Programming Languages</h3>
+                <a href="icons/Python-Light.svg" target="_blank">
+                    <img src="icons/Python-Light.svg" alt="C Programming" width="120" height="100"/>
+                </a></a><a href="icons/C.svg" target="_blank">
+                    <img src="icons/C.svg" alt="C Programming" width="120" height="100"/>
+                </a><a href="icons/CPP.svg" target="_blank">
+                    <img src="icons/CPP.svg" alt="C Programming" width="120" height="100"/>
+                </a><a href="icons/Java-Light.svg" target="_blank">
+                    <img src="icons/Java-Light.svg" alt="C Programming" width="120" height="100"/>
+                </a><a href="icons/JavaScript.svg" target="_blank">
+                    <img src="icons/JavaScript.svg" alt="C Programming" width="120" height="100"/>
+                </a><a href="icons/HTML.svg" target="_blank">
+                    <img src="icons/HTML.svg" alt="C Programming" width="120" height="100"/>
+                </a><a href="icons/CSS.svg" target="_blank">
+                    <img src="icons/CSS.svg" alt="C Programming" width="120" height="100"/>
+                </a><a href="icons/GoLang.svg" target="_blank">
+                    <img src="icons/GoLang.svg" alt="C Programming" width="120" height="100"/>
+                </a></a><a href="icons/Matlab-Light.svg" target="_blank">
+                    <img src="icons/Matlab-Light.svg" alt="C Programming" width="120" height="100"/>
+                </a></a><a href="icons/Kotlin-Light.svg" target="_blank">
+                    <img src="icons/Kotlin-Light.svg" alt="C Programming" width="120" height="100"/>
+                </a></a><a href="icons/Rust.svg" target="_blank">
+                    <img src="icons/Rust.svg" alt="C Programming" width="120" height="100"/>
+                </a>
+            </div>
+
+            <div class="developer tools">
+                <h3>Developer Tools</h3>
+                <a href="icons/Git.svg" target="_blank">
+                    <img src="icons/Git.svg" alt="C Programming" width="120" height="100"/>
+                </a><a href="icons/Linux-Light.svg" target="_blank">
+                    <img src="icons/Linux-Light.svg" alt="C Programming" width="120" height="100"/>
+                </a><a href="icons/Docker.svg" target="_blank">
+                    <img src="icons/Docker.svg" alt="C Programming" width="120" height="100"/>
+                </a><a href="icons/Netlify-Light.svg" target="_blank">
+                    <img src="icons/Netlify-Light.svg" alt="C Programming" width="120" height="100"/>
+                </a><a href="icons/VIM-Light.svg" target="_blank">
+                    <img src="icons/VIM-Light.svg" alt="C Programming" width="120" height="100"/>
+                </a><a href="icons/LaTeX-Light.svg" target="_blank">
+                    <img src="icons/LaTeX-Light.svg" alt="C Programming" width="120" height="100"/>
+                </a><a href="icons/TensorFlow-Light.svg" target="_blank">
+                    <img src="icons/TensorFlow-Light.svg" alt="C Programming" width="120" height="100"/>
+                </a><a href="icons/AndroidStudio-Light.svg" target="_blank">
+                    <img src="icons/AndroidStudio-Light.svg" alt="C Programming" width="120" height="100"/>
+                </a></a><a href="icons/RaspberryPi-Light.svg" target="_blank">
+                    <img src="icons/RaspberryPi-Light.svg" alt="C Programming" width="120" height="100"/>
+                </a>
+            </div>
+
+            <div class="frameworks">
+                <h3>Frameworks</h3>
+                <a href="icons/MongoDB.svg" target="_blank">
+                    <img src="icons/MongoDB.svg" alt="C Programming" width="120" height="100"/>
+                </a><a href="icons/ExpressJS-Light.svg" target="_blank">
+                    <img src="icons/ExpressJS-Light.svg" alt="C Programming" width="120" height="100"/>
+                </a><a href="icons/React-Light.svg" target="_blank">
+                    <img src="icons/React-Light.svg" alt="C Programming" width="120" height="100"/>
+                </a><a href="icons/NodeJS-Light.svg" target="_blank">
+                    <img src="icons/NodeJS-Light.svg" alt="C Programming" width="120" height="100"/>
+                </a><a href="icons/Flask-Light.svg" target="_blank">
+                    <img src="icons/Flask-Light.svg" alt="C Programming" width="120" height="100"/>
+                </a><a href="icons/Flutter-Light.svg" target="_blank">
+                    <img src="icons/Flutter-Light.svg" alt="C Programming" width="120" height="100"/>
+                </a><a href="icons/NextJS-Light.svg" target="_blank">
+                    <img src="icons/NextJS-Light.svg" alt="C Programming" width="120" height="100"/>
+                </a><a href="icons/Firebase-Light.svg" target="_blank">
+                    <img src="icons/Firebase-Light.svg" alt="C Programming" width="120" height="100"/>
+                <a href="icons/FastAPI.svg" target="_blank">
+                    <img src="icons/FastAPI.svg" alt="C Programming" width="120" height="100"/>
+                </a><a href="icons/PostgreSQL-Light.svg" target="_blank">
+                    <img src="icons/PostgreSQL-Light.svg" alt="C Programming" width="120" height="100"/>
+                </a>
     <aside>
         <!-- Sidebar or additional content goes here -->
     </aside>
