--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Contact Me</h1>
+        <h1>Welcome to My Portfolio</h1>
     </header>
     <nav>
         <ul>
@@ -21,6 +21,7 @@
             <li><a href="organizations.html">Organizations</a></li>
             <li><a href="resume.html">Resume</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li><a href="labexperiments.html">Lab-Experiments</a></li>
         </ul>
     </nav>
     <main>
