Added more tags/

--- a/organizations.html
+++ b/organizations.html
@@ -32,29 +32,34 @@
         <section>
             <h1>Organizations & Involvement</h1>
             <div class="job">
-                <h2>Society of Undergraduate Mathematics Students (SUMS)</h2>
+                <h2><span style="color: #007bff;">Society of Undergraduate Mathematics Students (SUMS)</span></h2>
                 <h3><em>Workshop's Chair</em></h3>
                 <p>As Workshops Chair, organized and hosted 10+ workshops, including a 3-part Putnam exam series attended by 20+ students.</p>
-                <img src="IMG_0177.jpg" alt="Devanshi Jain Portrait" style="max-width: 40%; height: auto;">
-                <img src="sums.jpg" alt="Devanshi Jain Portrait" style="max-width: 40%; height: auto;">
-            </div> 
-
-            <div class="job">
-                <h2>Institute of Electrical and Electronics Engineers</h2>
-                <h3><em>Technical Co-chair</em></h3>
-                <p>As Workshops Chair, organized and hosted 6+ workshops attended by 15+ students.</p>
-                <!-- <img src="IMG_0177.jpg" alt="Devanshi Jain Portrait" style="max-width: 40%; height: auto;">
-                <img src="sums.jpg" alt="Devanshi Jain Portrait" style="max-width: 40%; height: auto;"> -->
-            </div> 
+                <figure>
+                    <img src="IMG_0177.jpg" alt="Devanshi Jain Portrait" style="max-width: 40%; height: auto;">
+                    <figcaption>Presentating workshops at the general body meeting in 2022</figcaption>
+                </figure>
+                <figure>
+                    <img src="sums.jpg" alt="SUMS Image" style="max-width: 40%; height: auto;">
+                    <figcaption>Glimpse of the Number Theory : Putnam Workshop</figcaption>
+                </figure>
+            </div>
 
 
         </section>
     </main>
     <aside>
-        <!-- Sidebar or additional content goes here -->
+        <h4>Connect with Me</h2>
+        <a href="mailto:djain@ucsd.edu">
+            <img src="icons/gmail.svg" alt="C Programming" width="30" height="40"/>
+        </a><a href="https://www.linkedin.com/in/djain18/">
+            <img src="icons/LinkedIn.svg" alt="C Programming" width="30" height="40"/>
+        </a><a href="https://github.com/devanshi-jain">
+            <img src="icons/Github-Light.svg" alt="C Programming" width="30" height="40"/>
+        </a>
     </aside>
     <footer>
-        <!-- Footer content goes here -->
+        <p>&copy; 2023 Devanshi Jain</p>
     </footer>
 </body>
 </html>
