--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <title>About Me | Devanshi Jain</title>
 </head>
 <body>
@@ -25,15 +26,17 @@
     <section> 
         <!--  id="organizations" -->
     <h2>About Me</h1>
+        <section>
+            <figure>
+                <img src="snow.png" alt="Devanshi in snow">
+                <img src="pilot.jpg" alt="Pilot Training">
+            </figure>
+        </section>
         
-    <figure>
-        <img src="snow.png" alt="Devanshi Jain Portrait" style="max-width: 50%; height: auto;">
-        <img src="pilot.jpg" alt="Devanshi Jain Portrait" style="max-width: 39.6%; height: auto;">
-    </figure>
+        
   </section>
     </main>
     <h2>Technical Skills</h2>
-
             <div class="programming-skills">
                 <h3>Programming Languages</h3>
                 <a href="icons/Python-Light.svg" target="_blank">
@@ -108,10 +111,17 @@
                     <img src="icons/PostgreSQL-Light.svg" alt="C Programming" width="120" height="100"/>
                 </a>
     <aside>
-        <!-- Sidebar or additional content goes here -->
+        <h4>Connect with Me</h2>
+        <a href="mailto:djain@ucsd.edu">
+            <img src="icons/gmail.svg" alt="C Programming" width="30" height="40"/>
+        </a><a href="https://www.linkedin.com/in/djain18/">
+            <img src="icons/LinkedIn.svg" alt="C Programming" width="30" height="40"/>
+        </a><a href="https://github.com/devanshi-jain">
+            <img src="icons/Github-Light.svg" alt="C Programming" width="30" height="40"/>
+        </a>
     </aside>
     <footer>
-        <!-- Footer content goes here -->
+        <p>&copy; 2023 Devanshi Jain</p>
     </footer>
 </body>
 </html>
