--- a/contact.html
+++ b/contact.html
@@ -37,23 +37,43 @@
         <section>
             <h2>Get in Touch</h2>
             <form action="mailto:djian@ucsd.edu" method="post" enctype="text/plain">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required><br>
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required><br>
-                <label for="subject">Subject:</label>
-                <input type="text" id="subject" name="subject" required><br>
-                <label for="message">Message:</label>
-                <textarea id="message" name="message" rows="4" required></textarea><br>
-                <input type="submit" value="Send">
+                <fieldset>
+                    <legend>Contact Information</legend>
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name" required><br>
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" required><br>
+                    <label for="subject">Subject:</label>
+                    <input type="text" id="subject" name="subject" required><br>
+                </fieldset>
+                <fieldset>
+                    <legend>Your Message</legend>
+                    <label for="message">Message:</label>
+                    <textarea id="message" name="message" rows="4" required></textarea><br>
+                </fieldset>
+                <label for="category">Select a Category:</label>
+                <select id="category" name="category">
+                    <option value="general">General Inquiry</option>
+                    <option value="support">Technical Support</option>
+                    <option value="feedback">Feedback</option>
+                </select><br>
+                <button type="submit">Send</button>
             </form>
-        </section>
+        </section>        
+        
     </main>
     <aside>
-        <!-- Sidebar or additional content goes here -->
+        <h4>Connect with Me</h2>
+        <a href="mailto:djain@ucsd.edu">
+            <img src="icons/gmail.svg" alt="C Programming" width="30" height="40"/>
+        </a><a href="https://www.linkedin.com/in/djain18/">
+            <img src="icons/LinkedIn.svg" alt="C Programming" width="30" height="40"/>
+        </a><a href="https://github.com/devanshi-jain">
+            <img src="icons/Github-Light.svg" alt="C Programming" width="30" height="40"/>
+        </a>
     </aside>
     <footer>
-        <!-- Footer content goes here -->
+        <p>&copy; 2023 Devanshi Jain</p>
     </footer>
 </body>
 </html>
