--- a/index.html
+++ b/index.html
@@ -27,21 +27,26 @@
     <main>
         <section>
             <h1>Hello! I am Devanshi Jain</h1>
-            <figure>
+            <picture>
                 <img src="portrait.jpg" alt="Devanshi Jain Portrait" style="max-width: 100%; height: auto;">
-            </figure>
-            <p>
+            </picture>
+            <summary>
                 I am a 3rd-year undergraduate at UC San Diego studying mathematics and computer science. I have
-                a keen interest in probabilistic reasoning in the field of Artificial Intelligence. I am working to become a good software engineer to make products accessible to all.
-            </p>
-            
-            
-
-            <!-- </p> -->
+                a keen interest in probabilistic reasoning in the field of Artificial Intelligence. <br> I am working
+                to become a good software engineer to make products accessible to all. Currently, I am actively looking
+                for a software engineering internship for Summer 2024. 
+            </summary>
         </section>
     </main>
     <aside>
-        <!-- Sidebar or additional content goes here -->
+        <h4>Connect with Me</h2>
+        <a href="mailto:djain@ucsd.edu">
+            <img src="icons/gmail.svg" alt="C Programming" width="30" height="40"/>
+        </a><a href="https://www.linkedin.com/in/djain18/">
+            <img src="icons/LinkedIn.svg" alt="C Programming" width="30" height="40"/>
+        </a><a href="https://github.com/devanshi-jain">
+            <img src="icons/Github-Light.svg" alt="C Programming" width="30" height="40"/>
+        </a>
     </aside>
     <footer>
         <p>&copy; 2023 Devanshi Jain</p>
