--- a/labexperiments.html
+++ b/labexperiments.html
@@ -69,11 +69,39 @@
             <p>Here's a simple canvas experiment with text.</p>
         </section>
         
+        <section>
+            <b><i>Using CSS for styling instead of  &lt;b&gt; and &lt;i&gt; tags improves accessibility by separating visual presentation from content structure, ensuring semantic meaning is retained. This benefits users with disabilities and allows for more precise styling control.</i></b>
+            <br><strong>The &lt;strong&gt; tag, when used thoughtfully, helps emphasize content without changing its structure. This promotes accessibility, ensuring important information is effectively conveyed to all users and assistive technologies.</strong>
+        </section>
 
+        <section>
+            <p>HTML elements and their counts:</p>
+            <ul>
+                <li>html, head, title, meta, body, main, summary, br, picture - All in index.html (i.e., home page and others)</li>
+                <li>section, header, footer, aside, nav - can be seen on almost all pages</li>
+                <li>link - Used to link to styles.css - Used only twice in about page</li>
+                <li>script - 7 lines of JS for canvas experiment above</li>
+                <li>h1, h2, h3, p - All used sequentially in the work page</li>
+                <li> canvas, b, i, strong, - Can all be seen on the lab page</li>
+                <li>div, svg, ul, li, img, em, a- Used in the work page</li>
+                <li>a - used for Resume</li>
+                <li>form, label, input, text area, select, option, legend, button - contact page</li>
+                <li>span, figure, figcaption - Organizations page</li>
+
+ code, pre, hr, iframe, audio, video, source, ol, optgroup, label, fieldset, datalist, details, template, table, tr, td, th, caption, col, colgroup
+            </ul>
+        </section>
 
     </main>
     <aside>
-        <!-- Sidebar or additional content goes here -->
+        <h4>Connect with Me</h2>
+        <a href="mailto:djain@ucsd.edu">
+            <img src="icons/gmail.svg" alt="C Programming" width="30" height="40"/>
+        </a><a href="https://www.linkedin.com/in/djain18/">
+            <img src="icons/LinkedIn.svg" alt="C Programming" width="30" height="40"/>
+        </a><a href="https://github.com/devanshi-jain">
+            <img src="icons/Github-Light.svg" alt="C Programming" width="30" height="40"/>
+        </a>
     </aside>
     <footer>
         <p>&copy; 2023 Devanshi Jain</p>
