--- a/resume.html
+++ b/resume.html
@@ -24,15 +24,23 @@
     <main>
         <section>
             <h1>Resume</h1>
-            <p>You can view my resume right here:</p>
+            <p>You can view my resume right here:
+            <a href="resume.pdf" target="_blank">Devanshi's Resume (2023)</a></p>
             <embed src="resume.pdf" width="100%" height="1100" type="application/pdf">
         </section>
     </main>
     <aside>
-        <!-- Sidebar or additional content goes here -->
+        <h4>Connect with Me</h2>
+        <a href="mailto:djain@ucsd.edu">
+            <img src="icons/gmail.svg" alt="C Programming" width="30" height="40"/>
+        </a><a href="https://www.linkedin.com/in/djain18/">
+            <img src="icons/LinkedIn.svg" alt="C Programming" width="30" height="40"/>
+        </a><a href="https://github.com/devanshi-jain">
+            <img src="icons/Github-Light.svg" alt="C Programming" width="30" height="40"/>
+        </a>
     </aside>
     <footer>
-        <!-- Footer content goes here -->
+        <p>&copy; 2023 Devanshi Jain</p>
     </footer>
 </body>
 </html>
