--- a/work.html
+++ b/work.html
@@ -18,7 +18,6 @@
             <li><a href="resume.html">Resume</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="labexperiments.html">Lab-Experiments</a></li>
-
         </ul>
     </nav>
     <main>
@@ -27,8 +26,7 @@
             <h2>UC San Diego Jacobs School of Engineering</h2>
             <div class="job">
                 <h3>Center for Energy Research</h3>
-                <p><em>Software Engineering Intern</em> 
-                    <!-- <em></em></p> -->
+                <p><em>Software Engineering Intern</em></p>
                 <p>Part-time, September 2022 - Present</p>
                 <div class="skills">
                     <a href="https://www.python.org/" target="_blank">
@@ -40,9 +38,6 @@
                     <a href="https://pandas.pydata.org" target="_blank">
                         <img src="https://upload.wikimedia.org/wikipedia/commons/e/ed/Pandas_logo.svg" alt="pandas" width="170" height="100"/>
                     </a>
-                    <!-- <a href="https://matplotlib.org" target="_blank">
-                        <img src="logo-light.svg" alt="matplotlib" width="170" height="100"/>
-                    </a> -->
                     <a href="logo_light.svg" target="_blank">
                         <img src="logo_light.svg" alt="Matplotlib" width="170" height="100"/>
                     </a>
@@ -50,10 +45,12 @@
                         <img src="https://seaborn.pydata.org/_static/logo-wide-lightbg.svg" alt="seaborn" width="170" height="100"/>
                     </a>
                 </div>
-                <p>• Created a user-friendly smart-plug schedule optimization application which reduced building energy consumption by 20%.</p>
-                <p>• Utilized Numpy, Pandas, Matplotlib, and Seaborn to create insightful data visualizations that informed strategic decisions.</p>
-                <p>• Led the formulation of energy-saving criteria for 8+ campus laboratories, driving UCSD’s sustainability initiatives forward.</p>
-                <p>• Presented data-driven energy savings in meetings with 6 stakeholders across 4 campus buildings, securing approval.</p>
+                <ul>
+                    <li>Created a user-friendly smart-plug schedule optimization application which reduced building energy consumption by 20%.</li>
+                    <li>Utilized Numpy, Pandas, Matplotlib, and Seaborn to create insightful data visualizations that informed strategic decisions.</li>
+                    <li>Led the formulation of energy-saving criteria for 8+ campus laboratories, driving UCSD’s sustainability initiatives forward.</li>
+                    <li>Presented data-driven energy savings in meetings with 6 stakeholders across 4 campus buildings, securing approval.</li>
+                </ul>
                 <div class="video-container">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/Vc4xf1Yff2A" frameborder="0" allowfullscreen></iframe>
                     <img src="sample.png" alt="Sample Image" width="600" height="350">
@@ -65,28 +62,25 @@
                 <p><em>Undergraduate Researcher</em></p>
                 <p>Full-time, Jun 2023 - Oct 2023</p>
                 <p>San Diego, California, United States</p>
-                <p>Presenting summer research in the Summer Research Conference.</p>
-                <p>Skills: Software Development · Problem Solving · Ansys Design Modeller · Ansys TurboGrid · Ansys Customization Toolkit (ACT) · Computational Fluid Dynamics (CFD)</p>
-                <!-- <img src="src.png" alt="Sample Image"> -->
-                 <!-- width="600" height="350"> -->
-                <img src="src.png" alt="Devanshi Jain Portrait" style="max-width: 40%; height: auto;">
+                <ul>
+                    <li>Presenting summer research in the Summer Research Conference.</li>
+                    <li>Skills: Software Development · Problem Solving · Ansys Design Modeller · Ansys TurboGrid · Ansys Customization Toolkit (ACT) · Computational Fluid Dynamics (CFD)</li>
+                </ul>
+                <img src="src.png" alt="Devanshi Jain Portrait" style="max-width: 40%; height; auto;">
                 <img src="mesh.jpg" alt="Devanshi Jain Portrait" style="max-width: 38.4%; height: auto;">
-
             </div>
             
-            <div class="job">
+            <div class "job">
                 <h3>Kastner Research Group</h3>
                 <p><em>Embedded Systems Lead</em></p>
                 <p>Part-time, Nov 2021 – Present</p>
-                <p>• Developed an autonomous underwater vehicle with the Triton Robosub team under Professor Ryan Kastner’s mentorship.</p>
-                <p>• Specialized in optimizing hydrophone array systems for remote underwater signal perception and precise navigation.</p>
-                <p>• Developed signal processing algorithms, including peak detection, which improved audio analysis accuracy by 15%.</p>
-                <p>• Integrated the Multiple Signal Classification algorithm into the sub’s controls, enhancing real-time signal processing.</p>
-                <p>• Qualified for semi-finals of the Robosub 2023 Competition held in San Diego out of 35 teams representing 5 countries.</p>
-                <!-- <div class="video-container">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Vc4xf1Yff2A" frameborder="0" allowfullscreen></iframe>
-                    <img src="sample.png" alt="Sample Image" width="600" height="350">
-                </div> -->
+                <ul>
+                    <li>Developed an autonomous underwater vehicle with the Triton Robosub team under Professor Ryan Kastner’s mentorship.</li>
+                    <li>Specialized in optimizing hydrophone array systems for remote underwater signal perception and precise navigation.</li>
+                    <li>Developed signal processing algorithms, including peak detection, which improved audio analysis accuracy by 15%.</li>
+                    <li>Integrated the Multiple Signal Classification algorithm into the sub’s controls, enhancing real-time signal processing.</li>
+                    <li>Qualified for semi-finals of the Robosub 2023 Competition held in San Diego out of 35 teams representing 5 countries.</li>
+                </ul>
                 <img src="robosub1.jpg" alt="Devanshi Jain Portrait" style="max-width: 40%; height: auto;">
                 <img src="robosub2.jpg" alt="Devanshi Jain Portrait" style="max-width: 40%; height: auto;">
             </div> 
@@ -94,20 +88,31 @@
             <div class="job">
                 <h3>COSMOS - ‘Hacking for Oceans’ Project</h3>
                 <p><em>Teaching Assistant</em></p>
-                <p>Part-time,  Jun 2022 – Jul 2022</p>
-                <p>• Led a 6-week long lab section of 25+ students in developing autonomous boats with sensors to collect oceanographic data.</p>
-                <p>• Instructed students in configuring long range microcontrollers to enable remote networking and telemetry over 4 miles.</p>
-                <p>• Directed students in programming GPS navigation and real-time sensor data visualization to actively monitor water quality.</p>
+                <p>Part-time, Jun 2022 – Jul 2022</p>
+                <ul>
+                    <li>Led a 6-week long lab section of 25+ students in developing autonomous boats with sensors to collect oceanographic data.</li>
+                    <li>Instructed students in configuring long-range microcontrollers to enable remote networking and telemetry over 4 miles.</li>
+                    <li>Directed students in programming GPS navigation and real-time sensor data visualization to actively monitor water quality.</li>
+                </ul>
                 <img src="1cosmos.jpg" alt="Devanshi Jain Portrait" style="max-width: 40%; height: auto;">
                 <img src="2cosmos.jpg" alt="Devanshi Jain Portrait" style="max-width: 40%; height: auto;">
             </div>
         </section>
     </main>
     <aside>
-        <!-- Sidebar or additional content goes here -->
+        <h4>Connect with Me</h4>
+        <a href="mailto:djain@ucsd.edu">
+            <img src="icons/gmail.svg" alt="C Programming" width="30" height="40"/>
+        </a>
+        <a href="https://www.linkedin.com/in/djain18/">
+            <img src="icons/LinkedIn.svg" alt="C Programming" width="30" height="40"/>
+        </a>
+        <a href="https://github.com/devanshi-jain">
+            <img src="icons/Github-Light.svg" alt="C Programming" width="30" height="40"/>
+        </a>
     </aside>
     <footer>
-        <!-- Footer content goes here -->
+        <p>&copy; 2023 Devanshi Jain</p>
     </footer>
 </body>
 </html>
