--- a/organizations.html
+++ b/organizations.html
@@ -31,13 +31,34 @@
     <main>
         <section>
             <h1>Organizations & Involvement</h1>
-            <div class="job">
+            <!-- <template id="org-template"> -->
+            <table>
+                <caption>My Involvement in Organizations</caption>
+                <colgroup>
+                    <col style="background-color: #007bff;">
+                    <col>
+                    <col>
+                </colgroup>
+                <tr>
+                    <th>Organization</th>
+                    <th>Role</th>
+                    <th>Description</th>
+                </tr>
+                <tr>
+                    <td>Society of Undergraduate Mathematics Students (SUMS)</td>
+                    <td>Workshop's Chair</td>
+                    <td>Organized and hosted 10+ workshops, including a 3-part Putnam exam series attended by 20+ students.</td>
+                </tr>
+                <!-- Add more rows as needed -->
+            </table>
+            <!-- </template> -->
+            <div class="sums">
                 <h2><span style="color: #007bff;">Society of Undergraduate Mathematics Students (SUMS)</span></h2>
                 <h3><em>Workshop's Chair</em></h3>
                 <p>As Workshops Chair, organized and hosted 10+ workshops, including a 3-part Putnam exam series attended by 20+ students.</p>
                 <figure>
                     <img src="IMG_0177.jpg" alt="Devanshi Jain Portrait" style="max-width: 40%; height: auto;">
-                    <figcaption>Presentating workshops at the general body meeting in 2022</figcaption>
+                    <figcaption>Presenting workshops at the general body meeting in 2022</figcaption>
                 </figure>
                 <figure>
                     <img src="sums.jpg" alt="SUMS Image" style="max-width: 40%; height: auto;">
@@ -45,6 +66,11 @@
                 </figure>
             </div>
 
+            <h3>Here's me hitting the pinata for the CSE department's event in 2023:</h3>
+            <video controls>
+                <source src="pinata.mp4" type="video/mp4">
+                Your browser does not support the video element.
+              </video>
 
         </section>
     </main>
@@ -61,5 +87,7 @@
     <footer>
         <p>&copy; 2023 Devanshi Jain</p>
     </footer>
+
+
 </body>
 </html>
