--- a/about.html
+++ b/about.html
@@ -111,13 +111,13 @@
                     <img src="icons/PostgreSQL-Light.svg" alt="C Programming" width="120" height="100"/>
                 </a>
     <aside>
-        <h4>Connect with Me</h2>
+        <h4>Connect with Me</h4>
         <a href="mailto:djain@ucsd.edu">
-            <img src="icons/gmail.svg" alt="C Programming" width="30" height="40"/>
+            <img src="icons/gmail.svg" alt="C Programming" width="30" height="40">
         </a><a href="https://www.linkedin.com/in/djain18/">
-            <img src="icons/LinkedIn.svg" alt="C Programming" width="30" height="40"/>
+            <img src="icons/LinkedIn.svg" alt="C Programming" width="30" height="40">
         </a><a href="https://github.com/devanshi-jain">
-            <img src="icons/Github-Light.svg" alt="C Programming" width="30" height="40"/>
+            <img src="icons/Github-Light.svg" alt="C Programming" width="30" height="40">
         </a>
     </aside>
     <footer>
