--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1998/Math/MathML">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,26 +26,27 @@
     </nav>
     <main>
         <section>
-            <h1>Hello! I am Devanshi Jain</h1>
+            <h2>Hello! I am Devanshi Jain</h2>
             <picture>
                 <img src="portrait.jpg" alt="Devanshi Jain Portrait" style="max-width: 100%; height: auto;">
             </picture>
-            <summary>
-                I am a 3rd-year undergraduate at UC San Diego studying mathematics and computer science. I have
-                a keen interest in probabilistic reasoning in the field of Artificial Intelligence. <br> I am working
-                to become a good software engineer to make products accessible to all. Currently, I am actively looking
-                for a software engineering internship for Summer 2024. 
-            </summary>
         </section>
+        <summary>
+            I am a 3rd-year undergraduate at UC San Diego studying mathematics and computer science. I have
+            a keen interest in probabilistic reasoning in the field of Artificial Intelligence. <br> I am working
+            to become a good software engineer to make products accessible to all. Currently, I am actively looking
+            for a software engineering internship for Summer 2024. 
+        </summary>
+        
     </main>
     <aside>
-        <h4>Connect with Me</h2>
+        <h4>Connect with Me</h4>
         <a href="mailto:djain@ucsd.edu">
-            <img src="icons/gmail.svg" alt="C Programming" width="30" height="40"/>
+            <img src="icons/gmail.svg" alt="C Programming" width="30" height="40">
         </a><a href="https://www.linkedin.com/in/djain18/">
-            <img src="icons/LinkedIn.svg" alt="C Programming" width="30" height="40"/>
+            <img src="icons/LinkedIn.svg" alt="C Programming" width="30" height="40">
         </a><a href="https://github.com/devanshi-jain">
-            <img src="icons/Github-Light.svg" alt="C Programming" width="30" height="40"/>
+            <img src="icons/Github-Light.svg" alt="C Programming" width="30" height="40">
         </a>
     </aside>
     <footer>
