--- a/index.html
+++ b/index.html
@@ -31,12 +31,14 @@
                 <img src="portrait.jpg" alt="Devanshi Jain Portrait" style="max-width: 100%; height: auto;">
             </picture>
         </section>
-        <summary>
-            I am a 3rd-year undergraduate at UC San Diego studying mathematics and computer science. I have
-            a keen interest in probabilistic reasoning in the field of Artificial Intelligence. <br> I am working
-            to become a good software engineer to make products accessible to all. Currently, I am actively looking
-            for a software engineering internship for Summer 2024. 
-        </summary>
+        <details>
+            <summary>
+                I am a 3rd-year undergraduate at UC San Diego studying mathematics and computer science. I have
+                a keen interest in probabilistic reasoning in the field of Artificial Intelligence. <br> I am working
+                to become a good software engineer to make products accessible to all. Currently, I am actively looking
+                for a software engineering internship for Summer 2024. 
+            </summary> 
+        </details>
         
     </main>
     <aside>
