--- a/about.html
+++ b/about.html
@@ -24,12 +24,12 @@
     </nav>
     <main>
     <h2>About Me</h2>
-        <section>
+        <div>
             <figure>
                 <img src="snow.png" alt="Devanshi in snow">
                 <img src="pilot.jpg" alt="Pilot Training">
             </figure>
-        </section>
+        </div>
         
     </main>
     <h2>Technical Skills</h2>
