--- a/work.html
+++ b/work.html
@@ -22,27 +22,26 @@
     </nav>
     <main>
         <section>
-            <h1>Work Experience</h1>
-            <h2>UC San Diego Jacobs School of Engineering</h2>
+            <h2>Work Experience</h2>
+            <h3>UC San Diego Jacobs School of Engineering</h3>
             <div class="job">
-                <h3>Center for Energy Research</h3>
+                <h4>Center for Energy Research</h4>
                 <p><em>Software Engineering Intern</em></p>
-                <p>Part-time, September 2022 - Present</p>
                 <div class="skills">
                     <a href="https://www.python.org/" target="_blank">
-                        <img src="https://www.vectorlogo.zone/logos/python/python-icon.svg" alt="Python" width="70" height="100"/>
+                        <img src="https://www.vectorlogo.zone/logos/python/python-icon.svg" alt="Python" width="70" height="100">
                     </a>
                     <a href="https://numpy.org/" target="_blank">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/3/31/NumPy_logo_2020.svg" alt="numpy" width="170" height="100"/>
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/3/31/NumPy_logo_2020.svg" alt="numpy" width="170" height="100">
                     </a>
                     <a href="https://pandas.pydata.org" target="_blank">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/e/ed/Pandas_logo.svg" alt="pandas" width="170" height="100"/>
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/e/ed/Pandas_logo.svg" alt="pandas" width="170" height="100">
                     </a>
                     <a href="logo_light.svg" target="_blank">
                         <img src="logo_light.svg" alt="Matplotlib" width="170" height="100"/>
                     </a>
                     <a href="https://seaborn.pydata.org" target="_blank">
-                        <img src="https://seaborn.pydata.org/_static/logo-wide-lightbg.svg" alt="seaborn" width="170" height="100"/>
+                        <img src="https://seaborn.pydata.org/_static/logo-wide-lightbg.svg" alt="seaborn" width="170" height="100">
                     </a>
                 </div>
                 <ul>
@@ -52,13 +51,13 @@
                     <li>Presented data-driven energy savings in meetings with 6 stakeholders across 4 campus buildings, securing approval.</li>
                 </ul>
                 <div class="video-container">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Vc4xf1Yff2A" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Vc4xf1Yff2A" allowfullscreen></iframe>
                     <img src="sample.png" alt="Sample Image" width="600" height="350">
                 </div>
             </div>                       
 
             <div class="job">
-                <h3>Summer Researcher at CFD Lab</h3>
+                <h4>Summer Researcher at CFD Lab</h4>
                 <p><em>Undergraduate Researcher</em></p>
                 <p>Full-time, Jun 2023 - Oct 2023</p>
                 <p>San Diego, California, United States</p>
@@ -66,12 +65,12 @@
                     <li>Presenting summer research in the Summer Research Conference.</li>
                     <li>Skills: Software Development · Problem Solving · Ansys Design Modeller · Ansys TurboGrid · Ansys Customization Toolkit (ACT) · Computational Fluid Dynamics (CFD)</li>
                 </ul>
-                <img src="src.png" alt="Devanshi Jain Portrait" style="max-width: 40%; height; auto;">
+                <img src="src.png" alt="Devanshi Jain Portrait" style="max-width: 40%; height: auto;">
                 <img src="mesh.jpg" alt="Devanshi Jain Portrait" style="max-width: 38.4%; height: auto;">
             </div>
             
-            <div class "job">
-                <h3>Kastner Research Group</h3>
+            <div class="job">
+                <h4>Kastner Research Group</h4>
                 <p><em>Embedded Systems Lead</em></p>
                 <p>Part-time, Nov 2021 – Present</p>
                 <ul>
@@ -86,7 +85,7 @@
             </div> 
 
             <div class="job">
-                <h3>COSMOS - ‘Hacking for Oceans’ Project</h3>
+                <h4>COSMOS - ‘Hacking for Oceans’ Project</h4>
                 <p><em>Teaching Assistant</em></p>
                 <p>Part-time, Jun 2022 – Jul 2022</p>
                 <ul>
